[package]
name = "noodahl-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.7.1"
env_logger = "0.10.0"
log = "0.4.17"
time = "0.1.13"
itertools = "0.10.5"
self-meter = "0.4.0"
